--- a/CloudVideoPlayer.Website/wwwroot/index.html
+++ b/CloudVideoPlayer.Website/wwwroot/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>CloudVideoPlayer.Website</title>
     <base href="/" />
-    <link href="./_content/AngryMonkey.Cloud.VideoPlayer.Components/cloudvideoplayer.css" rel="stylesheet" />
+    <link href="./_content/AngryMonkey.Cloud.Components/cloudvideoplayer.css" rel="stylesheet" />
     <link href="AngryMonkey.Cloud.VideoPlayer.Website.styles.css" rel="stylesheet" />
     <link href="/site.css" rel="stylesheet" />
+    <script src="_framework/blazor.webassembly.js" defer></script>
 </head>
 
 <body>
     <div id="app">Loading...</div>
-    <script src="_framework/blazor.webassembly.js"></script>
 </body>
 
 </html>
