Progress bar initialized

--- a/CloudVideoPlayer.Website/wwwroot/index.html
+++ b/CloudVideoPlayer.Website/wwwroot/index.html
@@ -7,6 +7,7 @@
     <title>CloudVideoPlayer.Website</title>
     <base href="/" />
     <link href="./_content/AngryMonkey.Cloud.Components/cloudvideoplayer.css" rel="stylesheet" />
+    <link href="./_content/AngryMonkey.Cloud.Components/cloudprogressbar.css" rel="stylesheet" />
     <link href="AngryMonkey.Cloud.VideoPlayer.Website.styles.css" rel="stylesheet" />
     <link href="/site.css" rel="stylesheet" />
     <script src="_framework/blazor.webassembly.js" defer></script>
