CSS naming changed to amc-...

--- a/Test/wwwroot/index.html
+++ b/Test/wwwroot/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>CloudVideoPlayer.Website</title>
     <base href="/" />
-    <link href="./_content/AngryMonkey.Cloud.Components/videoplayer.min.css" rel="stylesheet" />
-    <link href="./_content/AngryMonkey.Cloud.Components/progressbar.min.css" rel="stylesheet" />
+    <link href="./_content/AngryMonkey.Cloud.Components/videoplayer/videoplayer.min.css" rel="stylesheet" />
+    <link href="./_content/AngryMonkey.Cloud.Components/progressbar/progressbar.min.css" rel="stylesheet" />
     <link href="AngryMonkey.Cloud.VideoPlayer.Website.styles.css" rel="stylesheet" />
     <link href="/site.css" rel="stylesheet" />
     <script src="_framework/blazor.webassembly.js" defer></script>
