--- a/Test/wwwroot/index.html
+++ b/Test/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link href="./_content/AngryMonkey.Cloud.Components/progressbar/progressbar.min.css" rel="stylesheet" />-->
     <link href="AngryMonkey.Cloud.VideoPlayer.Website.styles.css" rel="stylesheet" />
     <link href="/site.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <script src="_framework/blazor.webassembly.js" defer></script>
 </head>
 
